--- a/themes/futura/pages/thanks.htm
+++ b/themes/futura/pages/thanks.htm
@@ -1,7 +1,31 @@
-title = "Спасибо за регистрацию проекта"
+title = "Дякуєм за реєстрацію проекту"
 url = "/thanks"
 layout = "default"
 is_hidden = 0
 ==
 
-Спасибо
+<!-- Navigation -->
+<header id="layout-header" class="fixed-top">
+	<nav class="navbar navbar-expand-md fixed-top" id="navbar">
+		<a href="{{ 'home'|page }}" class="navbar-brand"><img src="{{ 'assets/images/futura-logo.png'|theme }}"></img></a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarMobileNav" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse text-uppercase" id="navbarNav">
+			<ul class="navbar-nav mx-auto" id="menu">
+				<li data-menuanchor="about" class="nav-item text-center">
+					<a class="nav-link px-4" href="{{ 'home'|page }}#about">{{ 'Що таке Futura'|_ }}</a>
+				</li>
+				<li data-menuanchor="work" class="nav-item text-center">
+					<a class="nav-link px-4" href="{{ 'home'|page }}#work">{{ 'Як це працює'|_ }}</a>
+				</li>
+				<li data-menuanchor="capacity" class="nav-item text-center">
+					<a class="nav-link px-4" href="{{ 'home'|page }}#capacity">{{ 'Наші компетенції'|_ }}</a>
+				</li>
+				<li data-menuanchor="goals" class="nav-item text-center">
+					<a class="nav-link px-4" href="{{ 'home'|page }}#goals">{{ 'Наш фокус'|_ }}</a>
+				</li>
+			</ul>
+		</div>
+	</nav>
+</header>
