add mail template layout

--- a/themes/futura/content/home_work.htm
+++ b/themes/futura/content/home_work.htm
@@ -1,10 +1,10 @@
-<div class="container">
+<div class="container pt-7 pb-4">
     <div class="row justify-content-center">
         <div class="col-11 text-center">
             <h3>Як це працює?</h3>
         </div>
     </div>
-    <div class="row mt-5 justify-content-center align-items-center">
+    <div class="row mt-3 justify-content-center align-items-center">
         <div class="mt-3 d-none d-lg-block col-1"></div>
         <figure class="mt-3 figure px-sm-2 col-6 col-sm-4 col-md-3 col-lg-2 text-center">
             <img src="{rootpath}/themes/futura/assets/images/work1.svg" class="figure-img img-fluid" />
@@ -46,7 +46,7 @@
         </figure>
         <div class="mt-3 d-none d-lg-block col-1"></div>
     </div>
-    <div class="row justify-content-center mt-6">
+    <div class="row justify-content-center mt-3">
         <div class="col-11 text-center">
             <a class="btn btn-primary" href="{rootpath}/uk/apply">Описати ідею</a>
         </div>
