--- a/themes/futura/content/home_about.htm
+++ b/themes/futura/content/home_about.htm
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container py-7">
     <div class="row mb-5 justify-content-center">
         <div class="col-11 col-lg-6 col-md-7 text-center">
             <h3>Що таке Futura?</h3>
