--- a/themes/futura/content/home_goals.htm
+++ b/themes/futura/content/home_goals.htm
@@ -4,37 +4,37 @@
             <h3>Наш фокус</h3>
         </div>
     </div>
-    <div class="row mt-5 justify-content-center align-items-center">
-        <figure class="mt-2 mb-5 figure px-sm-2 col-6 col-sm-5 text-center">
+    <div class="row mt-3 justify-content-center align-items-center">
+        <figure class="mt-1 mb-3 figure px-sm-2 col-11 col-sm-5 text-center">
             <img src="{rootpath}/themes/futura/assets/images/goal1.png" class="figure-img img-fluid" />
-            <figcaption class="figure-caption text-left pl-7 pt-4">
+            <figcaption class="figure-caption text-left pl-lg-7 pl-4 pt-4">
                 <h5>Людина / Здоров'я</h5>
-                <p class="mt-3">Ми прагнемо створювати простору для духовного, інтелектуального та фізичного вдосконалення людини.
+                <p class="mt-2">Ми прагнемо створювати простору для духовного, інтелектуального та фізичного вдосконалення людини.
                 </p>
             </figcaption>
         </figure>
-        <div class="mt-2 d-none d-lg-block col-1"></div>
-        <figure class="mt-2 mb-5 figure px-sm-2 col-6 col-sm-5 text-center">
+        <div class="mt-1 d-none d-lg-block col-1"></div>
+        <figure class="mt-1 mb-3 figure px-sm-2 col-11 col-sm-5 text-center">
             <img src="{rootpath}/themes/futura/assets/images/goal2.png" class="figure-img img-fluid" />
-            <figcaption class="figure-caption text-left pl-7 pt-4">
+            <figcaption class="figure-caption text-left pl-lg-7 pl-4 pt-4">
                 <h5>Суспільство / Культура</h5>
-                <p class="mt-3">Ми сфокусовані на розвитку локальних спільнот і збереження їх культурного капіталу.
+                <p class="mt-2">Ми сфокусовані на розвитку локальних спільнот і збереження їх культурного капіталу.
                 </p>
             </figcaption>
         </figure>
-        <figure class="mt-2 mb-5 figure px-sm-2 col-6 col-sm-5 text-center">
+        <figure class="mt-1 mb-3 figure px-sm-2 col-11 col-sm-5 text-center">
             <img src="{rootpath}/themes/futura/assets/images/goal3.png" class="figure-img img-fluid" />
-            <figcaption class="figure-caption text-left pl-7 pt-4">
+            <figcaption class="figure-caption text-left pl-lg-7 pl-4 pt-4">
                 <h5>Екологія / Природа</h5>
-                <p class="mt-3">Наші проекти спрямовані на впровадження оптимальних форм взаємодії людини та природи.</p>
+                <p class="mt-2">Наші проекти спрямовані на впровадження оптимальних форм взаємодії людини та природи.</p>
             </figcaption>
         </figure>
-        <div class="mt-2 d-none d-lg-block col-1"></div>
-        <figure class="mt-2 mb-5 figure px-sm-2 col-6 col-sm-5 text-center">
+        <div class="mt-1 d-none d-lg-block col-1"></div>
+        <figure class="mt-1 mb-3 figure px-sm-2 col-11 col-sm-5 text-center">
             <img src="{rootpath}/themes/futura/assets/images/goal4.png" class="figure-img img-fluid" />
-            <figcaption class="figure-caption text-left pl-7 pt-4">
+            <figcaption class="figure-caption text-left pl-lg-7 pl-4 pt-4">
                 <h5>Наука / Інновації</h5>
-                <p class="mt-3">Один з ключових напрямків діяльності Фонду - підтримка яскравих інноваційних проектів, що мають соціальне значення для майбутнього.</p>
+                <p class="mt-2">Один з ключових напрямків діяльності Фонду - підтримка яскравих інноваційних проектів, що мають соціальне значення для майбутнього.</p>
             </figcaption>
         </figure>
     </div>
