--- a/themes/futura/content/home_head.htm
+++ b/themes/futura/content/home_head.htm
@@ -1,7 +1,7 @@
-<div class="row justify-content-center">
-    <div class="col-11 col-lg-6 col-md-7 text-center">
+<div class="row justify-content-center py-7">
+    <div class="col-11 col-lg-6 col-md-7 pt-7 pt-md-0 text-center">
         Фонд культури та інновацій <strong>Futura</strong>
-        <h1 class="pb-4">Місце, де ідеї трансформуються у проекти</h1>
+        <h1 class="pb-4 pt-4 pt-md-0">Місце, де ідеї трансформуються у проекти</h1>
         <a class="btn btn-primary" href="{rootpath}/uk/apply">Описати ідею</a>
     </div>
 </div>
