--- a/themes/futura/pages/404.htm
+++ b/themes/futura/pages/404.htm
@@ -54,7 +54,7 @@ layout = "default"
 				<img src="{{ 'assets/images/futura-footer-logo.png'|theme }}"></img>
 			</div>
 			<div class="pt-3 pt-lg-6 col-10 col-lg-3 order-3 order-lg-3 text-center text-lg-right align-text-bottom">
-				<i class="far fa-envelope" style="font-size:20px; color:#f66367"></i>&nbsp;&nbsp;&nbsp;info@futura.org.ua
+				<i class="far fa-envelope" style="font-size:20px; color:#f66367"></i>&nbsp;&nbsp;&nbsp;project@futura.com.ua
 			</div>
 		</div>
 		<hr class="mt-6 mb-4"/>
