--- a/themes/futura/pages/apply.htm
+++ b/themes/futura/pages/apply.htm
@@ -33,7 +33,7 @@ function onRegistrationForm(){
 		'ukdate'=> $date[0].' '.$m.' '.$date[2],
     ];
 
-	foreach (['info@futura.org.ua', 'info@media-systems.com.ua', 'v.maly@media-systems.com.ua'] as $mailRecipient){
+	foreach (['info@media-systems.com.ua', 'v.maly@media-systems.com.ua'] as $mailRecipient){
 		Mail::send('levabd.mailtemplates::mail.order', $vars, function($message) use($mailRecipient, $vars) {
 			$message->to($mailRecipient, $vars['name']);
 		});
@@ -145,7 +145,7 @@ function onRegistrationForm(){
 				<img src="{{ 'assets/images/futura-footer-logo.png'|theme }}"></img>
 			</div>
 			<div class="pt-3 pt-lg-6 col-10 col-lg-3 order-3 order-lg-3 text-center text-lg-right align-text-bottom">
-				<i class="far fa-envelope" style="font-size:20px; color:#f66367"></i>&nbsp;&nbsp;&nbsp;info@futura.org.ua
+				<i class="far fa-envelope" style="font-size:20px; color:#f66367"></i>&nbsp;&nbsp;&nbsp;project@futura.com.ua
 			</div>
 		</div>
 		<hr class="mt-6 mb-4"/>
